--- a/apis.yml
+++ b/apis.yml
@@ -1,37 +1,37 @@
 aid: social-security-administration
-name: Social Security Administration
-description: >-
-  The Developer Support site provides Social Security Administrations (SSA) user
-  development community with links to documentation and information about SSA
-  applications. This allows developers to automate their organizations processes
-  to interact with SSA applications. Field Office and Resident Station Address
-  Data APIs
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2024-12-03'
-modified: '2024-12-03'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/social-security-administration/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: social-security-administration:social-security-administration
     name: Social Security Administration
+    tags:
+      - API
+    humanURL: https://www.ssa.gov/developer
+    properties:
+      - url: https://www.ssa.gov/developer
+        type: Documentation
     description: >-
       The Developer Support site provides Social Security Administrations (SSA)
       user development community with links to documentation and information
       about SSA applications. This allows developers to automate their
       organizations processes to interact with SSA applications. Field Office
       and Resident Station Address Data APIs
-    humanURL: https://www.ssa.gov/developer
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: https://www.ssa.gov/developer
+name: Social Security Administration
+tags:
+  - Federal Government
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2024-12-03'
+modified: '2025-01-03'
+position: Consuming
+description: >-
+  The Developer Support site provides Social Security Administrations (SSA) user
+  development community with links to documentation and information about SSA
+  applications. This allows developers to automate their organizations processes
+  to interact with SSA applications. Field Office and Resident Station Address
+  Data APIs
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
